--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -3,10 +3,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
+  padding: 1.5rem 0;
   margin: 0 0 30px;
   background-color: #00acb0;
   overflow: hidden;
+  z-index: 2;
 }
 
 .nav a {
