continuing to work on Menu and Nav, just need to finalize a few things before pushing

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -8,6 +8,9 @@
   background-color: #00acb0;
   overflow: hidden;
   z-index: 2;
+  /* position: fixed;
+  top: 0;
+  width: 100%; */
 }
 
 .nav a {
