--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -4,13 +4,11 @@
   justify-content: space-between;
   align-items: center;
   padding: 1.5rem 0;
-  margin: 0 0 30px;
   background-color: #00acb0;
   overflow: hidden;
-  z-index: 2;
-  /* position: fixed;
-  top: 0;
-  width: 100%; */
+  /* z-index: 2; */
+  /* position: sticky; */
+  width: 100%
 }
 
 .nav a {
