--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -35,10 +35,10 @@ Button
 .btn {
   display: inline-block;
   padding: 10px 20px;
-  border-color: #014041;
+  border-color: #7ebbf1;
   border-width: 1px 1px 3px;
   border-radius: 4px;
-  background-color: #00acb0;
+  background-color: #7ebbf1;
   color: #f8f8f8;
   font-size: 1.1rem;
   outline: 0;
