--- a/src/components/MyGear/MyGear.css
+++ b/src/components/MyGear/MyGear.css
@@ -27,6 +27,11 @@
     margin: 5px 0px 5px 30px;
 }
 
+.name {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 14px;
+}
+
 .image {
     background-color: tomato;
     height: 8.5rem;
@@ -43,4 +48,13 @@
     top: 0;
     right: 0;
     margin: 4px;
+}
+
+.close-button {
+    height: 3rem;
+    width: 8rem;
+    border-radius: 16px;
+    position: absolute;
+    bottom: 0;
+    margin: 10px;
 }
