--- a/src/components/DetailsView/DetailsView.css
+++ b/src/components/DetailsView/DetailsView.css
@@ -11,6 +11,8 @@
     position: absolute;
     right: 0;
     background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items:center;
 }
 
 
@@ -20,4 +22,15 @@
     position: absolute;
     left: 0;
     background-color: rgba(0, 0, 0, 0.5);
+}
+
+.cancel-button {
+    position:absolute;
+    top: 0;
+    right: 0;
+    margin: 10px;
+}
+
+.right-arrow-icon {
+    
 }
