--- a/src/components/DetailsView/DetailsView.css
+++ b/src/components/DetailsView/DetailsView.css
@@ -22,6 +22,8 @@
     position: absolute;
     left: 0;
     background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items:center;
 }
 
 .cancel-button {
@@ -29,8 +31,4 @@
     top: 0;
     right: 0;
     margin: 10px;
-}
-
-.right-arrow-icon {
-    
 }
