--- a/src/components/Favorites/Favorites.css
+++ b/src/components/Favorites/Favorites.css
@@ -75,3 +75,12 @@
     border-radius: 10px;
     padding: 2.5px
 }
+
+.chip {
+    display:inline-flex;
+    background-color: #e0e0e0;
+    padding: 0 12px;
+    border-radius: 32px;
+    font-size: 12px;
+    margin: 5px;
+}
