--- a/src/components/FilterDrawer/FilterDrawer.css
+++ b/src/components/FilterDrawer/FilterDrawer.css
@@ -1,3 +1,12 @@
-.filterSelect{
+/* .filterSelect{
     color: teal;
+} */
+
+.filterContainer{
+    margin-left: 5px;
+}
+
+.filterBtn{
+    display: flex;
+    float: right;
 }
