--- a/src/components/SwapItems/SwapItems.css
+++ b/src/components/SwapItems/SwapItems.css
@@ -47,8 +47,18 @@
       top: 0;
       right: 0;
       margin: 4px;
+
   }
   
+  .favorited {
+    fill: #E31B23;
+
+  }
+
+  .not-favorited {
+    fill: grey;
+  }
+
   .close-button {
       height: 3rem;
       width: 8rem;
