--- a/src/components/AllSwaps/AllSwaps.css
+++ b/src/components/AllSwaps/AllSwaps.css
@@ -10,6 +10,9 @@
   width: 160px;
   position: relative;
   margin: 1rem;
+  border-radius: 5px;
+  outline-width: 1px;
+  box-shadow: 8px 8px 2px 1px rgba(36, 36, 36, 0.2);
 }
 
 .title-lock {
