--- a/src/components/Favorites/Favorites.css
+++ b/src/components/Favorites/Favorites.css
@@ -1,86 +1,91 @@
 .container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-  
-  .item {
-      border: 1px solid black;
-      border-radius: 5px;
-      width: 10rem;
-      height: 10rem;
-      margin: 10px;
-      justify-content: space-evenly;
-      align-items: center;
-      position: relative;
-  }
-  
-  .add-gear-button {
-      height: 3rem;
-      width: 8rem;
-      border-radius: 16px;
-      align-items: flex-start;
-  }
-  
-  .title {
-      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-      margin: 5px 0px 5px 30px;
-  }
-  
-  .name {
-      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-      font-size: 14px;
-  }
-  
-  .image {
-      height: 8.5rem;
-      width: 10rem;
-  }
-  
-  .name {
-      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-      margin-left: 5px;
-  }
-  
-  .favorite-icon {
-      position: absolute;
-      top: 0;
-      right: 0;
-      margin: 4px;
-  }
-  
-  .close-button {
-      height: 3rem;
-      width: 8rem;
-      border-radius: 16px;
-      position: absolute;
-      bottom: 0;
-      margin: 10px;
-  }
-  
-  .modalImages {
-      border: 1px solid black;
-  }
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
 
-  .seller-price{
-    position: absolute;
-    top:2.5em;
-    right:2.5em;
+.item {
+  border: 1px solid black;
+  border-radius: 5px;
+  width: 10rem;
+  height: 10rem;
+  margin: 10px;
+  justify-content: space-evenly;
+  align-items: center;
+  position: relative;
+  outline-width: 1px;
+  box-shadow: 8px 8px 2px 1px rgba(36, 36, 36, 0.2);
+}
+
+.add-gear-button {
+  height: 3rem;
+  width: 8rem;
+  border-radius: 16px;
+  align-items: flex-start;
+}
+
+.title {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  margin: 5px 0px 5px 30px;
+}
+
+.name {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 14px;
+}
+
+.image {
+  height: 8.5rem;
+  width: 10rem;
+}
+
+.name {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  margin-left: 5px;
+}
+
+.favorite-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 4px;
+}
+
+.close-button {
+  height: 3rem;
+  width: 8rem;
+  border-radius: 16px;
+  position: absolute;
+  bottom: 0;
+  margin: 10px;
+}
+
+.modalImages {
+  border: 1px solid black;
+}
+
+.seller-price {
+  position: absolute;
+  top: 2.5em;
+  right: 2.5em;
 }
 
 .contact-seller-button {
-    position: absolute;
-    top: 11.5em;
-    right: 2.25em;
-    border-radius: 10px;
-    padding: 2.5px
+  position: absolute;
+  top: 11.5em;
+  right: 2.25em;
+  border-radius: 10px;
+  padding: 2.5px;
 }
 
 .chip {
-    display:inline-flex;
-    background-color: #e0e0e0;
-    padding: 0 12px;
-    border-radius: 32px;
-    font-size: 12px;
-    margin: 5px;
+  display: inline-flex;
+  background-color: #e0e0e0;
+  padding: 0 12px;
+  border-radius: 32px;
+  font-size: 12px;
+  margin: 5px;
 }
