--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -20,6 +20,12 @@ img {
   max-width: 100%;
 }
 
+.no-style-button {
+  border: none;
+  background: none;
+  font-size: 16px;
+}
+
 /* --------------------------------------------------------------------------------
 Container
 -------------------------------------------------------------------------------- */
