added top andd bottom padding to login/register form

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -217,6 +217,7 @@ Form Treatment
   min-width: 260px;
   min-height: 320px;
   background-color: white;
+  padding: 1rem 0;
 }
 
 .login-form > h1 {
