--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -18,6 +18,7 @@ body,
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0px;
+  overflow-x: hidden;
 }
 
 img {
@@ -235,3 +236,4 @@ Form Treatment
   will-change: opacity;
   z-index: -1;
 }
+
