--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,39 +1,29 @@
-@keyframes menu-open {
-  from {
-    right: -200px;
-  }
-  to {
-    right: 0;
-  }
-}
-
-.menu-open {
-  display: flex;
+.menu-open > .menuItems {
+  top: 70px;
+  right: 0;
   position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: transparent;
-  bottom: 0;
-  left: 0;
-  z-index: 3;
+  transform-origin: top;
+  transform: scaleY(100px);
+  transition: transform 0.2s ease;
+  z-index: 2;
 }
 
-.menu-open > div {
+.menu-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  position: absolute;
   background-color: white;
-  right: 0;
-  top: 80px;
-  z-index: 5;
-  animation-name: menu-open;
-  animation-duration: 0.5s;
+  overflow: hidden;
+  display: relative;
 }
 
-.menu-closed {
-  display: none;
+.menu-closed > .menuItems {
+  top: 70px;
+  right: 0;
+  position: absolute;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: transform 0.2s ease;
+  z-index: 2;
 }
 
 .hamburger {
@@ -41,8 +31,15 @@
   height: 35px;
 }
 
-.menuItem {
+.menuItems {
   margin: 0 0 3px 0;
+  display: flex;
+  flex-direction: column;
+  background-color: transparent;
+  background-color: white;
+  border-radius: 0 0 10px 10px;
+  padding: 0.25rem;
+  box-shadow: 0 10px 10px rgb(97, 97, 97);
 }
 
 .menuItems a {
