--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,6 +7,7 @@
 :root {
   --main-blue: #7ebbf1;
   --second-blue: #c8e0f4;
+  --black-text: #585858;
 }
 
 html,
@@ -19,6 +20,7 @@ body {
   font-family: 'Poppins', sans-serif;
   margin: 0px;
   overflow-x: hidden;
+  background-color: #efefef;
 }
 
 img {
@@ -237,3 +239,53 @@ Form Treatment
   z-index: -1;
 }
 
+.card-container {
+  display: flex;
+  overflow-x: scroll;
+}
+
+.swap-card {
+  display: flex;
+  flex-direction: column;
+  height: 231px;
+  width: 180px;
+  position: relative;
+  margin: 2rem 0.5rem;
+  border-radius: 5px;
+  outline-width: 1px;
+  box-shadow: 2px 2px 6px 0 var(--black-text);
+  background-color: white;
+}
+
+.swap-card > img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 0.5rem;
+}
+
+.title-lock {
+  color: var(--black-text);
+  display: flex;
+  position: absolute;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0 0.5rem;
+}
+
+.days-until {
+  color: var(--black-text);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 0 0.5rem;
+}
+
+.swap-header {
+  padding: 0 10px;
+  background-color: var(--second-blue);
+  font-size: 24px;
+  font-weight: bolder;
+  color: var(--black-text);
+}
