--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -37,11 +37,23 @@
   flex-direction: column;
   background-color: transparent;
   background-color: white;
-  border-radius: 0 0 10px 10px;
+  border-radius: 10px;
   padding: 1rem;
   box-shadow: 0 10px 10px rgb(97, 97, 97);
 }
 
 .menuItems a {
   text-decoration: none;
+}
+
+.triangle {
+  position: absolute;
+  top: -10px;
+  right: 7px;
+  border-top: 0px solid white;
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid white;
 }
