my gear, favorites and swap items all look the same now

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -317,9 +317,14 @@ Form Treatment
   margin: 5px;
 }
 
+.card-cancel {
+  height: 16px;
+  width: 16px;
+}
+
 .description-button-container {
   display: flex;
-  margin: 0 10px;
+  margin: 10px;
 }
 
 .description-button-container > img {
