--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -355,3 +355,122 @@ Form Treatment
   transition: transform 0.1s ease;
   margin: 0 10px;
 }
+
+.img-modal {
+  top: 50%;
+  left: 50%;
+  padding: 5px;
+  transform: translate(-50%, -50%);
+  position: relative;
+  outline: none;
+}
+
+.details-modal {
+  top: 50%;
+  left: 50%;
+  right: auto;
+  bottom: auto;
+  margin-right: -50%;
+  position: relative;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  height: 90%;
+  overflow-y: scroll;
+  background-color: white;
+  box-shadow: 0 0 10px var(--black-text);
+  border-radius: 10px;
+  outline: none;
+}
+
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 300ms ease;
+}
+
+.ReactModal__Overlay--after-open {
+  z-index: 1000;
+  opacity: 1;
+  transition: opacity 300ms ease;
+  background-color: transparent;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
+  transition: opacity 300ms ease;
+}
+
+.ReactModal__Body--open {
+  overflow-y: hidden;
+}
+
+.modal-button-container {
+  display: flex;
+  justify-content: center;
+}
+
+.detail-view-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 0.5rem 1rem;
+}
+
+.modal-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+  padding: 15px;
+  background-color: var(--main-blue);
+  border-radius: 10px 10px 0 0;
+  height: 2rem;
+  width: 100%;
+  z-index: 3;
+}
+
+.chip {
+  display: inline-flex;
+  background-color: var(--main-blue);
+  color: white;
+  padding: 4px 12px;
+  border-radius: 32px;
+  font-size: 12px;
+  margin: 5px;
+}
+
+.chip-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.header-title {
+  color: white;
+}
+
+.item-user-img-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.round-frame {
+  border-radius: 100%;
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  box-shadow: 0 0 0 2px white, 0 0 0 6px var(--main-blue);
+  margin: 1rem 0;
+}
+
+.profile-img {
+  width: 100%;
+}
+
+.seller-price {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
