--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -5,9 +5,10 @@
   align-items: center;
   padding: 0.75rem 0;
   background-color: #7ebbf1;
-  overflow: hidden;
-  z-index: 2;
+  z-index: 1;
   width: 100%;
+  position: sticky;
+  top: 0;
 }
 
 .nav a {
