--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -23,6 +23,10 @@ body {
   background-color: #efefef;
 }
 
+ul {
+  list-style-type: none;
+}
+
 img {
   display: inline-block;
   max-width: 100%;
@@ -170,6 +174,7 @@ Form Treatment
 .li-with-button {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .top-margin {
@@ -472,5 +477,60 @@ Form Treatment
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+}
+
+.profile-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;
+}
+
+.profile-info-container {
+  display: flex;
+}
+
+.left-side {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.center {
+  justify-content: center;
+}
+
+.swap-admin-container {
+  border-radius: 10px;
+  background-color: white;
+  margin: 10px;
+  border-radius: 10px;
+}
+
+.white-text {
+  color: white;
+  z-index: 0;
+}
+
+.swap-list {
+  padding: 10px;
+}
+
+.smaller-btn {
+  min-height: 10px;
+  font-size: 12px;
+}
+
+.upgrade-user-container {
+  padding: 10px;
+}
+
+.input-button-inline {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
