--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -534,3 +534,13 @@ Form Treatment
   flex-direction: column;
   align-items: center;
 }
+
+.add-card {
+  margin: 5px;
+  width: 150px;
+}
+
+.add-button {
+  height: 16px;
+  width: 16px;
+}
