styled profile edit

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -39,6 +39,7 @@
   background-color: white;
   border-radius: 10px;
   padding: 1rem;
+  width: 170px;
   box-shadow: 0 10px 10px rgb(97, 97, 97);
 }
 
