fixed an error with days remaining, styled add gear view

--- a/src/components/CreateSwap/CreateSwap.css
+++ b/src/components/CreateSwap/CreateSwap.css
@@ -11,13 +11,15 @@
 .tool-tip .tool-tip-text {
   visibility: hidden;
   width: 200px;
-  background-color: black;
+  background-color: #7EBBF1;
   color: #fff;
   text-align: center;
   padding: 5px 0;
   border-radius: 6px;
   position: absolute;
   z-index: 1;
+  top: -5px;
+  right: 105%;
 }
 
 
