--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -404,7 +404,8 @@ Form Treatment
   transform: translate(-50%, -50%);
   background-color: white;
   width: 90%;
-  height: 90%;
+  height: auto;
+  max-height: 70%;
   overflow-y: scroll;
   box-shadow: 0 0 10px var(--black-text);
   border-radius: 10px;
@@ -718,6 +719,7 @@ td {
   align-items: center;
   justify-content: center;
   padding: 10px;
+  
 }
 
 .smaller-text {
@@ -728,4 +730,8 @@ td {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.button-container > a {
+  text-decoration: none;
 }
